various content fixes

--- a/codekit-config.json
+++ b/codekit-config.json
@@ -88,17 +88,6 @@
       "initialSize" : 57803,
       "fileType" : 4096
     },
-    "\/img\/dot.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/img\/dot.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/img\/dot.png",
-      "initialSize" : 191,
-      "fileType" : 8192
-    },
     "\/img\/logo-768.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -108,6 +97,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/img\/logo-768.png",
       "initialSize" : 8286,
+      "fileType" : 8192
+    },
+    "\/img\/dot.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/dot.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/dot.png",
+      "initialSize" : 191,
       "fileType" : 8192
     },
     "\/index.html" : {
@@ -303,17 +303,6 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/js\/oldpie\/PIE.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/oldpie\/PIE.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/oldpie\/PIE-ck.js",
-      "fileType" : 64
-    },
     "\/img\/logo.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -335,6 +324,28 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/html5shiv-ck.js",
       "fileType" : 64
+    },
+    "\/js\/oldpie\/PIE.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/oldpie\/PIE.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/oldpie\/PIE-ck.js",
+      "fileType" : 64
+    },
+    "\/img\/btn-active.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/btn-active.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/btn-active.jpg",
+      "initialSize" : 1182,
+      "fileType" : 4096
     },
     "\/js\/PIE_IE9.js" : {
       "ignoreWasSetByUser" : 0,
@@ -365,6 +376,18 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 16
     },
+    "\/css\/ie8.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/ie8.scss",
+      "outputStyle" : 1,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "\/css\/ie8.css",
+      "fileType" : 4,
+      "debugStyle" : 0
+    },
     "\/img\/content-business.jpg" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -375,18 +398,6 @@
       "outputAbbreviatedPath" : "\/img\/content-business.jpg",
       "initialSize" : 27540,
       "fileType" : 4096
-    },
-    "\/css\/ie8.scss" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/ie8.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/css\/ie8.css",
-      "fileType" : 4,
-      "debugStyle" : 0
     },
     "\/img\/content-youth@2x.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -499,6 +510,26 @@
       "outputAbbreviatedPath" : "\/js\/vendor\/jquery.smooth-scroll-ck.js",
       "fileType" : 64
     },
+    "\/img\/btn-hover.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/btn-hover.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/btn-hover.jpg",
+      "initialSize" : 1164,
+      "fileType" : 4096
+    },
+    "\/css\/ie8.css" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/ie8.css",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 16
+    },
     "\/js\/vendor\/jquery.smooth-scroll.min.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -572,17 +603,6 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/img\/Map@2x.png",
       "initialSize" : 131273,
-      "fileType" : 8192
-    },
-    "\/img\/Map.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/img\/Map.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/img\/Map.png",
-      "initialSize" : 50882,
       "fileType" : 8192
     }
   },
