--- a/codekit-config.json
+++ b/codekit-config.json
@@ -88,17 +88,6 @@
       "initialSize" : 57803,
       "fileType" : 4096
     },
-    "\/img\/logo-768.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/img\/logo-768.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/img\/logo-768.png",
-      "initialSize" : 8286,
-      "fileType" : 8192
-    },
     "\/img\/dot.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -108,6 +97,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/img\/dot.png",
       "initialSize" : 191,
+      "fileType" : 8192
+    },
+    "\/img\/logo-768.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/logo-768.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/logo-768.png",
+      "initialSize" : 8286,
       "fileType" : 8192
     },
     "\/index.html" : {
@@ -303,6 +303,17 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
+    "\/js\/oldpie\/PIE.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/oldpie\/PIE.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/oldpie\/PIE-ck.js",
+      "fileType" : 64
+    },
     "\/img\/logo.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -323,17 +334,6 @@
       "outputStyle" : 1,
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/html5shiv-ck.js",
-      "fileType" : 64
-    },
-    "\/js\/oldpie\/PIE.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/oldpie\/PIE.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/oldpie\/PIE-ck.js",
       "fileType" : 64
     },
     "\/img\/btn-active.jpg" : {
@@ -376,6 +376,17 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 16
     },
+    "\/img\/content-business.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/content-business.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/content-business.jpg",
+      "initialSize" : 27540,
+      "fileType" : 4096
+    },
     "\/css\/ie8.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -387,17 +398,6 @@
       "outputAbbreviatedPath" : "\/css\/ie8.css",
       "fileType" : 4,
       "debugStyle" : 0
-    },
-    "\/img\/content-business.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/img\/content-business.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/img\/content-business.jpg",
-      "initialSize" : 27540,
-      "fileType" : 4096
     },
     "\/img\/content-youth@2x.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -476,6 +476,17 @@
       "initialSize" : 1099,
       "fileType" : 8192
     },
+    "\/js\/PIE_IE678_uncompressed.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/PIE_IE678_uncompressed.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/PIE_IE678_uncompressed-ck.js",
+      "fileType" : 64
+    },
     "\/css\/main.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -487,17 +498,6 @@
       "outputAbbreviatedPath" : "\/css\/main.css",
       "fileType" : 4,
       "debugStyle" : 0
-    },
-    "\/js\/PIE_IE678_uncompressed.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/PIE_IE678_uncompressed.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/PIE_IE678_uncompressed-ck.js",
-      "fileType" : 64
     },
     "\/js\/vendor\/jquery.smooth-scroll.js" : {
       "ignoreWasSetByUser" : 0,
@@ -603,6 +603,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/img\/Map@2x.png",
       "initialSize" : 131273,
+      "fileType" : 8192
+    },
+    "\/img\/Map.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/img\/Map.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/img\/Map.png",
+      "initialSize" : 32834,
       "fileType" : 8192
     }
   },
